members delete route is functional on local and swagger updates
