# controllers/membersController.js
@@ -82,12 +82,23 @@ const updateMemberRecord = async (req, res) => {
 
 /* routes.delete('/:id', controller.deleteMember); */
 
+const deleteMember = async (req, res) => {
+    const memberId = req.params.id;
+
+    try {
+        const deletedMember = await Member.deleteOne({ _id: memberId });
+        res.sendStatus(200);
+    } catch (error) {
+        res.status(500).json({ error: error.message });
+    }
+}
+
 module.exports = { 
     getMembers,
     getMemberById,
     addMember,
     updateMemberRecord,
-    /* deleteMember, */
+    deleteMember
  };
 
 
